<resources>
    <string name="app_name">AndroidProject</string>
    <string-array name="operator">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  auth  -->
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_register">Đăng ký</string>
    <string name="txt_account">Tài khoản</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_verified_password">Nhập lại mật khẩu</string>
    <string name="txt_save_account">Lưu tài khoản</string>
    <string name="txt_forget_password">Quên mật khẩu?</string>
    <string name="btn_login">@string/txt_login</string>
    <string name="txt_or_continue_with">hoặc tiếp tục với</string>
    <string name="txt_phone">Số điện thoại</string>
    <string name="txt_email">Email</string>
    <string name="des_logo_techno">Techno\'s Logo</string>
    <string name="des_techno_logo">Techno\'s Logo</string>
    <string name="txt_register_now">Đăng ký ngay</string>
    <string name="desc_login_with_fingerprint">Đăng nhập với vân tay</string>
    <string name="txt_privacy_and_requirement_1">Tôi đông ý</string>
    <string name="txt_privacy_and_requirement_2">và</string>
    <string name="txt_privacy">chính sách bảo mật</string>
    <string name="txt_requirement">điều khoản</string>
    <string name="txt_have_account">Đã có tài khoản?</string>
    <string name="txt_first_name">Tên</string>
    <string name="txt_last_name">Họ</string>
    <string name="txt_to_login">Đăng nhập</string>
    <string name="txt_gender_male">Nam</string>
    <string name="txt_gender_female">Nữ</string>
    <string name="txt_gender_other">Khác</string>
    <string name="txt_gender">Giới tính</string>
    <string name="et_show_password">Ẩn/Hiện mật khẩu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="btn_back_to_admin_mng_menu">Trở lại menu quản lý</string>
    <string name="tb_account_info">Thông tin tài khoản</string>
    <string name="btn_back_to_menu">Trở lại menu</string>
    <string name="btn_edit">Sửa</string>
    <string name="iv_user_image">User\'s Image</string>
    <string name="tv_df_user">Techno User</string>
    <string name="tv_df_gender">Khác</string>
    <string name="tv_user_detail">Chi tiết</string>
    <string name="tv_df_tier">Normal Technie</string>
    <string name="tv_df_user_id">user000001</string>
    <string name="tv_user_id_title">ID người dùng</string>
    <string name="tv_user_address_title">Địa chỉ</string>
    <string name="tv_empty">Trống</string>
    <string name="tv_user_email_title">Email</string>
    <string name="tv_user_phone_title">Số điện thoại</string>
    <string name="tv_total_spent">Số tiền đã tiêu</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_to_store">Tiếp tục mua sắm</string>
    <string name="tv_title_wishlist">Sản phẩm yêu thích</string>
    <string name="tv_techno_store">Techno Store</string>
    <string name="des_empty_wishlist">Không có sản phẩm yêu thích</string>
    <string name="tv_empty_wishlist_1">Wishlist trống trơn</string>
    <string name="tv_empty_wishlist_2">Đến trang sản phẩm để lựa chọn\ncác sản phẩm ưng ý nha!</string>
    <string name="tv_product">Sản phẩm</string>
    <string name="tv_brand">Nhãn hàng</string>
    <string name="tv_df_price">100.000 đ</string>
    <string name="txt_role">Quyền</string>
    <string name="txt_guest">Guest</string>
    <string name="txt_admin">Admin</string>
    <string name="btn_add_admin">Tạo tài khoản</string>
    <string name="tv_add_admin">Tạo tài khoản Admin</string>

</resources>