<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/black_border"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/btnWishlist"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_gravity="end|top"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_border"
            android:padding="8dp"
            android:src="@drawable/ic_wishlist_off"
            app:tint="@color/grey" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_product"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvProductBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/tv_brand"
        android:textSize="11sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tv_df_price"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/btnAddToCart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="12dp"
            android:background="@color/black"
            android:padding="8dp"
            android:src="@drawable/add_cart"
            app:tint="@android:color/white" />
    </FrameLayout>
</LinearLayout>
